--- a/src/main/resources/config/application-local.yml
+++ b/src/main/resources/config/application-local.yml
@@ -2,12 +2,12 @@ spring:
    application:
      name: handler
    profiles: 
-    active: dev
+    active: local
    jackson:
     serialization:
       indent-output: true
 kafka:
-  bootstrap-servers: kafka:9092
+  bootstrap-servers: localhost:29092
   consumer:
     key.deserializer: org.apache.kafka.common.serialization.StringDeserializer
     value.deserializer: org.apache.kafka.common.serialization.StringDeserializer
